--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ ollama>=0.3.0
 # Web Dashboard
 streamlit>=1.35.0
 plotly>=5.22.0
+matplotlib
 
 # Knowledge Graph & Ontology
 networkx>=3.3
@@ -22,6 +23,10 @@ rdflib>=7.0.0
 
 # NLP
 spacy>=3.7.0
+
+# PDF Processing
+pdfplumber>=0.10.0
+reportlab
 
 # Utilities
 python-dotenv>=1.0.0
