--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 langchain>=0.2.0
 langchain-community>=0.2.0
 langchain-ollama>=0.1.0
+langchain-openai>=0.1.0
 
 # Vector Database
 chromadb>=0.5.0
